[tool.poetry]
name = "python_jvm"
version = "0.1.0"
description = ""
authors = ["Kentaro Ueda <kentaro.ueda.kentaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
