[tool.poetry]
name = "python_jvm"
version = "0.1.0"
description = ""
authors = ["Kentaro Ueda <kentaro.ueda.kentaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.6.0"
mypy = "^0.930"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
